<resources>
    <string name="app_name">YOOLAH</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="internal_storage">sd</string>
    <string-array name="types">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
    </string-array>
    <string name="title_activity_maps">Map</string>


    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="document">Document</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="adding_you_to_group..">Adding you to group..</string>
    <string name="you_are_not_authorized_to_send_message">You are not authorized to send message</string>
    <string name="reply_to">Reply To:</string>
    <string name="no_contacts">No contacts</string>
    <string name="opt_1">Opt 1:</string>
    <string name="total_votes">Total votes</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_signup">Dont have an account? Signup</string>
    <string name="welcome_to_yoolah">Welcome to Yoolah</string>
    <string name="enter_a_group_id_or_scan_qr_code">Enter a group id or scan QR code</string>
    <string name="or">or</string>
    <string name="scan_qr">Scan QR</string>
    <string name="recover_login">Recover Login</string>
    <string name="development">Development</string>
    <string name="please_complete_your_profile">Please complete your profile</string>
    <string name="share">Share</string>
    <string name="read_by">Read By</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="enter_your_name_to_continue">Enter your name to continue</string>
    <string name="download_and_save_this_qr_code_for_easy_login">Download and save this qr code for easy login</string>
    <string name="your_id_is">Your id is:</string>
    <string name="continuee">Continue</string>
    <string name="please_copy_and_save_it">Please copy and save it</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="signup">Signup</string>
    <string name="share_location">Share Location</string>
    <string name="email_a_participant_to_join_group">Email a participant to join group</string>
    <string name="invite">Invite</string>
    <string name="choose_option">Choose option</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Photo</string>
    <string name="question">Question</string>

    <string name="enter">Enter</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="cannot">Cannot/Can message</string>
    <string name="admin">Admin</string>
    <string name="please_copy_your_id_safely_which">, welcome. please copy your ID safely whichis needed later in case of login</string>
    <string name="participants">Participants</string>
    <string name="title">Title</string>
    <string name="fill_poll">Fill Poll</string>
    <string name="create_poll">Create Poll</string>
    <string name="list_of_polls">List of polls</string>
    <string name="select_contact">Select Contact</string>
    <string name="my_profile">My profile</string>
    <string name="message_info">Message Info</string>
    <string name="leave_group">Leave Group</string>
    <string name="votes">Votes</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_id">Enter Id</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="room_id">Room id</string>
    <string name="password">Password</string>
    <string name="enter_question">Enter Question</string>
    <string name="enter_title">Enter Title</string>
    <string name="settings">Settings</string>

    <string name="choose_app_language">Choose App Language</string>
</resources>
