<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:hint="@string/enter_title"
                    android:inputType="textCapSentences"
                    android:textColor="@color/colorBlue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:hint="@string/enter_question"
                    android:inputType="textCapSentences"
                    android:textColor="@color/colorBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/opt_1"
                        android:textColor="@color/colorBlue" />

                    <EditText
                        android:id="@+id/option1"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="5.5"
                        android:background="@null"
                        android:hint="Option 1:"

                        android:inputType="textCapSentences"
                        android:textColor="@color/colorBlue" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_cancel"
                        android:visibility="invisible" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/opt_1"
                        android:textColor="@color/colorBlue" />

                    <EditText
                        android:id="@+id/option2"
                        android:layout_width="0dp"
                        android:layout_height="60dp"

                        android:layout_gravity="center"
                        android:layout_weight="5.5"
                        android:background="@null"
                        android:hint="Option 2:"
                        android:inputType="textCapSentences"
                        android:textColor="@color/colorBlue" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_cancel"
                        android:visibility="invisible" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/option3Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="7">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/opt_1"
                        android:textColor="@color/colorBlue" />

                    <EditText
                        android:id="@+id/option3"
                        android:layout_width="0dp"
                        android:layout_height="60dp"

                        android:layout_gravity="center"
                        android:layout_weight="5.5"
                        android:background="@null"
                        android:hint="Option 3:"
                        android:inputType="textCapSentences"
                        android:textColor="@color/colorBlue" />

                    <ImageView
                        android:id="@+id/deleteOption3"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_cancel" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/option4Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="7">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Opt 1:"
                        android:textColor="@color/colorBlue" />

                    <EditText
                        android:id="@+id/option4"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="5.5"
                        android:background="@null"
                        android:hint="Option 4:"
                        android:inputType="textCapSentences"
                        android:textColor="@color/colorBlue" />

                    <ImageView
                        android:id="@+id/deleteOption4"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_cancel" />


                </LinearLayout>

                <Button
                    android:id="@+id/add"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_bg_empty"
                    android:inputType="text"
                    android:text="+"
                    android:textColor="@color/colorBlue"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_bg"
                    android:inputType="text"
                    android:text="@string/submit"
                    android:textColor="#fff" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wholeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="#fff"
        android:visibility="gone">


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>